# avalon

./: .gitignore  go.mod  go.sum
api/: routes.go
api/hello/: getName.go
avalon-py/: pyproject.toml
avalon-py/avalon/: __init__.py  client.py
avalon-py/avalon/protos/: __init__.py  __init___.py  job_pb2.py  job_pb2_grpc.py  scheduler_pb2.py  scheduler_pb2_grpc.py  task_pb2.py  task_pb2_grpc.py
cmd/avalon/: config.go  main.go  middleware.go
db/: drive.go
executor/: error.go  error_test.go  executor.go  local.go  local_test.go  option.go  remote.go  ssh.go  ssh_helper.go
executor/scp/: helper.go  scp.go  scp_test.go
mocks/: process.py  task.yml
mocks/job2/: sdfge
protobuf/helloworld/: helloworld.pb.go  helloworld.proto  helloworld_grpc.pb.go
protobuf/job/: job.pb.go  job.proto  job_grpc.pb.go
protobuf/scheduler/: scheduler.pb.go  scheduler.proto  scheduler_grpc.pb.go
protobuf/task/: task.pb.go  task.proto  task_grpc.pb.go
rpc/: register.go
rpc/helloworld/: hello.go
scripts/: protoc_go.sh  protoc_py.sh  run_sshd.sh
tests/data/: test.csv
tests/entrypoint.d/: setpasswd.sh
